Changed: Image resize javascript is only executed if the resize_width argument to html_draw_top is numeric. Allows it to be disabled by specifying false. Fixed: Updated text alignment in the image resize info bar in the style sheets (missing vertical-align: middle on image_resize_icon class)

--- a/forum/styles/Yellow/style.css
+++ b/forum/styles/Yellow/style.css
@@ -1093,4 +1093,5 @@ a {
 
 .image_resize_icon {
     padding: 5px;
+    vertical-align: middle;
 }
