--- a/forum/styles/blue/style.css
+++ b/forum/styles/blue/style.css
@@ -1099,4 +1099,5 @@ a {
 
 .image_resize_icon {
     padding: 5px;
+    vertical-align: middle;
 }
