--- a/forum/styles/style.css
+++ b/forum/styles/style.css
@@ -1086,4 +1086,5 @@ a {
 
 .image_resize_icon {
     padding: 5px;
+    vertical-align: middle;
 }
